# qcrawl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.toml
.github/workflows/: checks.yml  deploy_site.yml  test-macos.yml  test-ubuntu.yml  test-windows.yml
docs/: CNAME  index.md
docs/advanced-topics/: anti_bot_evasion.md  browser_automation.md  crawl_ordering.md
docs/advanced_topics/: authentication.md  data_extraction.md  error_recovery.md  link_filtering.md  pagination.md  rate_limiting.md
docs/built-in/: logging.md  stats.md
docs/concepts/: cli.md  exporters.md  item_pipeline.md  items.md  middlewares.md  requests_responses.md  selectors.md  settings.md  spiders.md
docs/extending/: architecture_overview.md  middleware.md  scheduler.md  testing.md
docs/getting-started/: examples.md  installation.md  overview.md
qcrawl/: __init__.py  cli.py  exporters.py  formatter.py  settings.py  signals.py  storage.py
qcrawl/core/: __init__.py  _msgspec.py  crawler.py  downloader.py  engine.py  item.py  page.py  queue.py  request.py  response.py  scheduler.py  spider.py  stats.py
qcrawl/core/queues/: __init__.py  factory.py  memory.py
qcrawl/downloaders/: __init__.py  base.py  camoufox.py  handler_manager.py  http.py
qcrawl/middleware/: __init__.py  base.py  manager.py
qcrawl/middleware/downloader/: __init__.py  concurrency.py  cookies.py  download_delay.py  httpauth.py  httpcompression.py  httpproxy.py  redirect.py  retry.py  robotstxt.py
qcrawl/middleware/spider/: __init__.py  depth.py  httperror.py  offsite.py
qcrawl/pipelines/: __init__.py  base.py  duplicate.py  manager.py  validation.py
qcrawl/runner/: __init__.py  engine.py  export.py  logging.py  pipelines.py  run.py
qcrawl/utils/: __init__.py  env.py  fingerprint.py  middleware.py  settings.py  url.py
tests/: test_cli.py  test_exporters.py  test_logging.py  test_signals.py
tests/core/: test_crawler.py  test_engine.py  test_item.py  test_page.py  test_request.py  test_response.py  test_scheduler.py  test_spider.py  test_stats.py
tests/core/queues/: test_factory.py  test_memory_queue.py  test_redis_queue.py
tests/downloaders/: test_camoufox.py  test_downloader.py
tests/integration/: test_camoufox.py
tests/middleware/: test_manager.py
tests/middleware/downloader/: test_download_delay.py
tests/runner/: test_export.py  test_logging.py  test_run.py
